implement blocks get and mine routes
